Fixed heading tags to be more semantically correct, removed school logo because it takes up too much space on mobile, added shadow on experience-accord to make it more visible

--- a/src/containers/experienceAccordion/ExperienceAccordion.css
+++ b/src/containers/experienceAccordion/ExperienceAccordion.css
@@ -11,6 +11,7 @@
   font-size: 1.3rem;
   padding-left: 2rem;
   padding-right: 2rem;
+  box-shadow: 0 0 3px #aaa;
 }
 
 #experience-accord div:nth-of-type(2) {
