--- a/src/pages/education/EducationComponent.css
+++ b/src/pages/education/EducationComponent.css
@@ -1,3 +1,7 @@
+#educations {
+  padding: 0;
+}
+
 .education-main {
   width: 100%;
 }
